--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
   <body>
       <p> </p>
     <h2>5 SECOND RULE</h2>
-  <h4>color the blocks</h4>
+  <h4>get the black blocks</h4>
+  <div id="scoreTotal">
+    0
+  </div>
+  <p></p>
   <canvas width="500" height="500"></canvas>
   <h1 id="timer">5</h1>
-    <script src="main.js"></script>
-    
-    
+  <button style="display: none;" id="restart">Restart Game</button>
+    <script src="main.js"></script>  
   </body>
 </html>
