--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
   <body>
       <p> </p>
     <h2>5 SECOND RULE</h2>
-  <h4>get the black blocks</h4>
+  <h4> | CATCH THE BLACK BLOCK |</h4>
+  
+  <div id="score-div">
+    <p>highest score: <span id= "high-score"></span> 
+</div>
+
   <div id="scoreTotal">
     0
   </div>
-  <p></p>
-  <canvas width="500" height="500"></canvas>
+</p>
+ <p></p>
+  <canvas width="460" height="460"></canvas>
   <h1 id="timer">5</h1>
+  <p>
   <button style="display: none;" id="restart">Restart Game</button>
+</p>
     <script src="main.js"></script>  
   </body>
 </html>
