--- a/index.html
+++ b/index.html
@@ -12,13 +12,16 @@
     <h2>5 SECOND RULE</h2>
   <h4> | CATCH THE BLACK BLOCK |</h4>
   
-  <div id="score-div">
+
+<div id="score-div">
     <p>highest score: <span id= "high-score"></span> 
 </div>
 
-  <div id="scoreTotal">
-    0
+<div>
+   <p id="scoreTotal"> 0</p>
   </div>
+
+
 </p>
  <p></p>
   <canvas width="460" height="460"></canvas>
@@ -27,5 +30,10 @@
   <button style="display: none;" id="restart">Restart Game</button>
 </p>
     <script src="main.js"></script>  
+    <audio controls>
+
+      <source src="city-girls-pussy-talk-feat-doja-cat-official-audio.mp3" type="audio/mpeg" autostart="true">
+
+      </audio>
   </body>
 </html>
