--- a/index.html
+++ b/index.html
@@ -27,14 +27,11 @@
   <canvas width="460" height="460"></canvas>
   <h1 id="timer">5</h1>
   <p>
-  <button style="display: none;" id="restart">Restart Game</button>
+    <button id="restart" class="big-button">Restart</button>
+   
 </p>
     <script src="main.js"></script>  
-    <audio controls>
+    <p></p>
 
-      <source src="city-girls-pussy-talk-feat-doja-cat-official-audio.mp3" type="audio/mpeg" autostart="true">
-
-      </audio>
-      
   </body>
 </html>
