--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-      <p> </p>
+      <p class="p1"></p>
     <h2>5 SECOND RULE</h2>
   <h4> | CATCH THE BLACK BLOCK |</h4>
   
@@ -25,7 +25,7 @@
 </p>
  <p></p>
   <canvas width="460" height="460"></canvas>
-  <h1 id="timer">5</h1>
+  <h1 class="timer" id="timer">5</h1>
   <p>
     <button id="restart" class="big-button">Restart</button>
    
