--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
       <p class="p1"></p>
     <h2>5 SECOND RULE</h2>
-  <h4> | CATCH THE BLACK BLOCK |</h4>
+  <h4>  get the biggest number of black squares under 5 seconds! </h4>
   
 
 <div id="score-div">
